# patr

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  patr.py  pyproject.toml  vite.config.js  vitest.config.js  vitest.setup.js
.github/workflows/: tests.yml
assets/: newsletter.css
layouts/: list.html  single.html
src/patr/: __main__.py  auth.py  cli.py  config.py  contacts.py  content.py  gifs.py  gmail.py  server.py  state.py  updates.py
src/patr/data/assets/: email.css  newsletter.css
src/patr/data/layouts/_markup/: render-image.html
src/patr/static/: App.jsx  app.css  app.js  editor.css  main.jsx
src/patr/static/components/: EditorPanel.jsx  EditorPanel.test.jsx  MainPanel.jsx  Sidebar.jsx  Sidebar.test.jsx  countSelectionWords.test.js  gifButton.test.jsx  gifLink.test.js  gifPaste.test.jsx  markDecorations.test.js  selectionWordCount.test.jsx  sentBadge.test.jsx  sentLogModal.test.jsx  wordCountDebounce.test.jsx
src/patr/static/components/modals/: ConfirmModal.jsx  ConflictModal.jsx  DeleteEditionModal.jsx  DeleteEditionModal.test.jsx  HelpModal.jsx  HistoryModal.jsx  Modal.jsx  NewEditionModal.jsx  SentLogModal.jsx  SettingsModal.jsx  SideBySideDiff.jsx  TestSendModal.jsx
src/patr/templates/: index.html
tests/: conftest.py  test_auth.py  test_backup.py  test_check_deployment.py  test_check_update.py  test_cli.py  test_commit.py  test_config.py  test_contacts.py  test_content_rendering.py  test_e2e.py  test_edition_content.py  test_edition_lifecycle.py  test_footer.py  test_gifs.py  test_import_sent_log.py  test_install.py  test_isolation.py  test_pdf_preview.py  test_prune_backups.py  test_publish.py  test_send.py  test_sent_log_route.py  test_state_paths.py  test_updates.py  test_versions.py
