[project]
name = "patr"
version = "0.1.0"
description = "Patr — Hugo newsletter tool (पत्र)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "python-frontmatter>=1.1",
    "markdown>=3.6",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.120",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "tomlkit>=0.14.0",
    "css-inline>=0.20.2",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = ["e2e: end-to-end browser tests (require Chromium or Chrome)"]

[tool.setuptools.package-data]
patr = ["data/**/*", "templates/*", "static/dist/**/*"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[project.scripts]
patr = "patr.cli:main"

[tool.ruff]
line-length = 88
